--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 h1 {
     font-size: 23px;
+    font-weight: 500;
 }
 
 button {
@@ -8,8 +9,6 @@ button {
 }
 
 li {
-    width: fit-content;
-    background-color: rgba(203, 235, 255, 0.5);
     margin-top: 5px;
     padding-right: 5px;
     padding-left: 5px;
@@ -21,10 +20,14 @@ input[type="checkbox"] {
     transform: scale(1.3)
 }
 
-#btn-clear {
-    
-}
-
 li.checked {
     text-decoration: line-through;    
 }
+
+#todolist li {
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    gap: 8px; 
+    background-color: rgba(203, 235, 255, 0.5);
+  }
