--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,8 @@ li.checked {
     display: flex;
     align-items: center;
     gap: 8px;
-    background-color: rgba(203, 235, 255, 0.5);
+    background-color: rgba(203, 235, 255, 0.55);
+    transition: transform 300ms ease;
 }
 
 :root {
@@ -40,7 +41,11 @@ li.checked {
 @media (prefers-color-scheme: dark) {
     :root {
         --bg-color: #121212;
-        --text-color: #f5f5f5;
+        --text-color: #121212;
+    }
+
+    li {
+        color: #121212;
     }
 }
 
